--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.2",
     "apexcharts": "^3.41.0",
     "date-fns": "^2.30.0",
@@ -26,10 +27,13 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.25.0",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
