--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.12.2",
     "apexcharts": "^3.41.0",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -32,8 +34,7 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.25.0",
-    "sort-by": "^0.0.2",
-    "axios": "^1.6.2"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
